libs/Parser/Parser.cpp
/**
 * libs/Parser/Parser.cpp
 * Copyright (c) 2021 Emilien Lemaire <emilien.lem@icloud.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
#include <algorithm>
#include <memory>
#include <string>
#include <vector>

#include <CppLogger2/CppLogger2.h>

#include "AST/ASTExprNode.hpp"
#include "AST/ASTNode.hpp"
#include "AST/ASTStatementNode.hpp"
#include "Lexer/TokenUtils.hpp"
#include "Parser/Parser.hpp"
#include "Symbol/Type.hpp"
#include "Symbol/PrimitiveType.hpp"
#include "Symbol/FunctionType.hpp"
#include "Symbol/ArrayType.hpp"
#include "Symbol/StructType.hpp"

//#define LOG_PARSER

namespace yapl {
    Parser::Parser(const std::string &filepath, CppLogger::Level level)
        : m_Logger(level, "Parser"), m_Lexer(filepath), m_FilePath(filepath)
    {
        CppLogger::Format format({
                CppLogger::FormatAttribute::Name,
                CppLogger::FormatAttribute::Level,
                CppLogger::FormatAttribute::Message
                });

        m_Logger.setFormat(format);

        m_SymbolTable = SymbolTable::InitTopSymTab();
    }

    void Parser::parseInfo(const std::string &info) {
#ifdef LOG_PARSER
        m_Logger.printInfo("Parsing {}", info);
#endif
    }

    int Parser::getOpPrecedence(Operator t_Operator) {
        switch (t_Operator) {
            case Operator::TIMES:
            case Operator::BY:
            case Operator::MOD:
                return (int)OperatorPrec::MULT;
            case Operator::PLUS:
            case Operator::MINUS:
                return (int)OperatorPrec::ADD;
            case Operator::LTH:
            case Operator::MTH:
            case Operator::LEQ:
            case Operator::MEQ:
                return (int)OperatorPrec::COMP;
            case Operator::EQ:
            case Operator::NEQ:
                return (int)OperatorPrec::EQ;
            case Operator::AND:
                return (int)OperatorPrec::AND;
            case Operator::OR:
                return (int)OperatorPrec::OR;
            case Operator::NONE:
                return -1;
        }
    }

    void Parser::parse() {
        std::vector<std::unique_ptr<ASTNode>> nodes;
        m_CurrentToken = m_Lexer.getNextToken();

        while (m_Lexer.peekToken().token != token::EOF_) {
            auto node = parseNext();

            if (!node) {
                m_CurrentToken = m_Lexer.getNextToken();
            }

            nodes.push_back(std::move(node));
        }

        m_Program = std::make_unique<ASTProgramNode>(m_SymbolTable, std::move(nodes));
    }

    std::unique_ptr<ASTProgramNode> Parser::getProgram() {
        return std::move(m_Program);
    }

    std::unique_ptr<ASTNode> Parser::parseNext() {
        parseInfo("next");

        while (m_CurrentToken == token::SEMI) {
            m_CurrentToken = m_Lexer.getNextToken();
        }

        if (m_CurrentToken.token == token::IMPORT) {
            return parseImport();
        }

        if (m_CurrentToken == token::EXPORT) {
            return parseExport();
        }

        if (m_CurrentToken == token::FUNC) {
            return parseFunctionDefinition();
        }

        if (m_CurrentToken == token::STRUCT) {
            return parseStructDefinition();
        }

        if (m_CurrentToken == token::IDENT) {
            auto identNode = parseIdentifier(m_CurrentToken.identifier);
            if (m_CurrentToken != token::SEMI){
                return parseError<ASTDeclarationNode>(
                        "File: {}:{}\n\tMissing a ';' after a statement instead of {}",
                        m_FilePath,
                        m_CurrentToken.pos,
                        m_CurrentToken
                    );
            }

            m_CurrentToken = m_Lexer.getNextToken(); // Eat ';'

            return identNode;
        }


        if (m_CurrentToken == token::EOF_) {
            return std::make_unique<ASTEOFNode>(m_SymbolTable);
        }

        // We can only have sentences that start with the token above at top level.
        return parseError<ASTNode>(
                "File: {}:{}\n\tUnexpected token at top level scope: {}",
                m_FilePath,
                m_CurrentToken.pos,
                m_CurrentToken);
    }

    std::unique_ptr<ASTImportNode> Parser::parseImport() {
        std::string currentIdentifier;

        std::unique_ptr<ASTImportNode> importNode = std::make_unique<ASTImportNode>(m_SymbolTable);

        m_CurrentToken = m_Lexer.getNextToken();

        if (m_CurrentToken != token::IDENT) {
            return parseError<ASTImportNode>(
                    "File: {}:{}\n\tExpecting an identifier after 'import' instead of {}",
                    m_FilePath,
                    m_CurrentToken.pos,
                    m_CurrentToken
                );
        }

        currentIdentifier = m_CurrentToken.identifier;

        m_CurrentToken = m_Lexer.getNextToken();

        while (m_CurrentToken == token::D_COLON) {
            importNode->addNamespace(currentIdentifier);
            m_CurrentToken = m_Lexer.getNextToken(); // Eat ::

            if (m_CurrentToken != token::IDENT && m_CurrentToken != token::BRA_O) {
                return parseError<ASTImportNode>(
                        "File: {}:{}\n\tExpecting an identifier or '{' after '::' instead of {}",
                        m_FilePath,
                        m_CurrentToken.pos,
                        m_CurrentToken
                    );
            }

            if (m_CurrentToken == token::BRA_O) { // Cas namespace::{value, value1};
                break;
            }

            currentIdentifier = m_CurrentToken.identifier;

            m_CurrentToken = m_Lexer.getNextToken(); // Eat identifier
        }

        if (m_CurrentToken == token::SEMI) { // Cas import namespace::value;
            importNode->addImportedValue(currentIdentifier);
        }

        if (m_CurrentToken == token::BRA_O) {
            m_CurrentToken = m_Lexer.getNextToken(); // Eat '{'

            if (m_CurrentToken != token::IDENT)
            {
                return parseError<ASTImportNode>(
                        "File {}:{}\n\tExpecting an identifier after '{' in import statement instead of {}",
                        m_FilePath,
                        m_CurrentToken.pos,
                        m_CurrentToken
                    );
            }

            while (m_CurrentToken == token::IDENT) {
                importNode->addImportedValue(m_CurrentToken.identifier);
                m_CurrentToken = m_Lexer.getNextToken();

                if (m_CurrentToken != token::COMMA && m_CurrentToken != token::BRA_C) {
                    return parseError<ASTImportNode>(
                            "File: {}:{}\n\tExpecting an identifier or '{' after '::' instead of {}",
                            m_FilePath,
                            m_CurrentToken.pos,
                            m_CurrentToken
                        );
                }

                if (m_CurrentToken == token::BRA_C) {
                    m_CurrentToken = m_Lexer.getNextToken(); // Eat '}'
                    break;
                }

                if (m_CurrentToken == token::COMMA) {
                    m_CurrentToken = m_Lexer.getNextToken(); // Eat ','

                    if (m_CurrentToken != token::IDENT) {
                        return parseError<ASTImportNode>(
                                "File: {}:{}\n\tExpecting an identifier after ',' "
                                "in import statement instead of {}",
                                m_FilePath,
                                m_CurrentToken.pos,
                                m_CurrentToken
                            );
                    }
                }
            }
        }

        if (m_CurrentToken != token::SEMI) {
            return parseError<ASTImportNode>(
                    "File: {}:{}\n\tExpecting a ';' after 'import' statement instead of {}",
                    m_FilePath,
                    m_CurrentToken.pos,
                    m_CurrentToken
                );
        }

        m_CurrentToken = m_Lexer.getNextToken(); // Eat ';'

        return std::move(importNode);
    }

    std::unique_ptr<ASTExportNode> Parser::parseExport() {
        m_CurrentToken = m_Lexer.getNextToken(); // Eat 'export'

        ASTExportNode exportNode(m_SymbolTable);

        if (m_CurrentToken == token::IDENT) {
            exportNode.addExportedValue(m_CurrentToken.identifier);

            m_CurrentToken = m_Lexer.getNextToken(); // Eat identifier;

            if (m_CurrentToken != token::SEMI) {
                return parseError<ASTExportNode>(
                        "File: {}:{}\n\tExpecting a ';' after export statement, instead of {}",
                        m_FilePath,
                        m_CurrentToken.pos,
                        m_CurrentToken
                    );
            }

            m_CurrentToken = m_Lexer.getNextToken(); // Eat ';'

            return std::make_unique<ASTExportNode>(exportNode);
        }

        if (m_CurrentToken == token::BRA_O) {
            m_CurrentToken = m_Lexer.getNextToken(); // Eat '{'

            if (m_CurrentToken == token::IDENT) {
                std::string currentIdentifier = m_CurrentToken.identifier;

                m_CurrentToken = m_Lexer.getNextToken(); // Eat identifier

                while (m_CurrentToken == token::COMMA) {
                    exportNode.addExportedValue(currentIdentifier);

                    m_CurrentToken = m_Lexer.getNextToken(); // Eat ','

                    if (m_CurrentToken != token::IDENT) {
                        return parseError<ASTExportNode>(
                                "File: {}:{}\n\tExpecting an identifier after ',' instead of {}",
                                m_FilePath,
                                m_CurrentToken.pos,
                                m_CurrentToken
                            );
                    }

                    currentIdentifier = m_CurrentToken.identifier;
                    m_CurrentToken = m_Lexer.getNextToken(); // Eat identifier
                } // While token == COMMA

                exportNode.addExportedValue(currentIdentifier);

                if (m_CurrentToken != token::BRA_C) {
                    return parseError<ASTExportNode>(
                            "File: {}:{}\n\tMissing matching '}' instead of {}",
                            m_FilePath,
                            m_CurrentToken.pos,
                            m_CurrentToken
                        );
                }

                m_CurrentToken = m_Lexer.getNextToken(); // Eat '}'

                return std::make_unique<ASTExportNode>(exportNode);
            }

            return parseError<ASTExportNode>(
                    "File: {}:{}\n\tExpecting an identifier after '{' instead of {}",
                    m_FilePath,
                    m_CurrentToken.pos,
                    m_CurrentToken
                );
        }

        return parseError<ASTExportNode>(
                "File: {}:{}\n\tExpecting an identifier or a '{' after 'export' instead of {}",
                m_FilePath,
                m_CurrentToken.pos,
                m_CurrentToken
            );
    }

    // TODO: Add "this" to paramters if function is mathod, or find a way to change the type of the function later
    std::unique_ptr<ASTFunctionDefinitionNode> Parser::parseFunctionDefinition() {
        m_CurrentToken = m_Lexer.getNextToken(); // Eat 'func'

        m_SymbolTable = m_SymbolTable->pushScope(m_SymbolTable); // We enter the function scope

        auto functionDefinition = std::make_unique<ASTFunctionDefinitionNode>(m_SymbolTable);

        if (m_CurrentToken != token::IDENT) {
            return parseError<ASTFunctionDefinitionNode>(
                    "File: {}:{}\n\tExpecting an identifier after 'func' instead of {}",
                    m_FilePath,
                    m_CurrentToken.pos,
                    m_CurrentToken
                );
        }

        auto funcName = m_CurrentToken.identifier;

        m_CurrentToken = m_Lexer.getNextToken(); // Eat identifier

        if (m_CurrentToken != token::PAR_O) {
            return parseError<ASTFunctionDefinitionNode>(
                    "File: {}:{}\n\tExpecting a parameter list after a function identifier instead of {}",
                    m_FilePath,
                    m_CurrentToken.pos,
                    m_CurrentToken
                );
        }

        m_CurrentToken = m_Lexer.getNextToken(); // Eat '('

        // This should allow for default parameters, let's try
        bool hasDefaultParameter = false;

        // We get the params
        while (m_CurrentToken != token::PAR_C) {
            if (m_CurrentToken != token::IDENT) {
                return parseError<ASTFunctionDefinitionNode>(
                        "File: {}:{}\n\tExpecting a declaration in function parameters list instead of {}",
                        m_FilePath,
                        m_CurrentToken.pos,
                        m_CurrentToken
                    );
            }

            auto typeName = m_CurrentToken.identifier;

            m_CurrentToken = m_Lexer.getNextToken(); // Eat type identifier

            auto declaration = parseDeclaration(typeName);

            bool isInitialization = false;
            if (dynamic_cast<ASTInitializationNode*>(declaration.get())) {
                isInitialization = true;
            }

            if (dynamic_cast<ASTArrayInitializationNode*>(declaration.get())) {
                isInitialization = true;
            }

            hasDefaultParameter = hasDefaultParameter || isInitialization;

            if (hasDefaultParameter && !isInitialization) {
                return parseError<ASTFunctionDefinitionNode>(
                        "File: {}:{}\n\tIn {} declaration, all subsequent parameters to a default "
                        "parameter must be defaulted too.",
                        m_FilePath,
                        m_CurrentToken.pos,
                        funcName
                    );
            }

            functionDefinition->addParameter(std::move(declaration));

            if (m_CurrentToken == token::COMMA) {
                m_CurrentToken = m_Lexer.getNextToken();

                if (m_CurrentToken != token::IDENT) {
                    return parseError<ASTFunctionDefinitionNode>(
                            "File: {}:{}\n\tExpecting a type identifier after a ',' in parameters list "
                            "instead of {}",
                            m_FilePath,
                            m_CurrentToken.pos,
                            m_CurrentToken
                        );
                }
            } else if (m_CurrentToken != token::PAR_C) {
                return parseError<ASTFunctionDefinitionNode>(
                        "File; {}:{}\n\tExpecting a ')' at the end of parameters list instead of {}",
                        m_FilePath,
                        m_CurrentToken.pos,
                        m_CurrentToken
                    );
            }

        }

        m_CurrentToken = m_Lexer.getNextToken(); // Eat ')'

        if (m_CurrentToken != token::ARROW) {
            return parseError<ASTFunctionDefinitionNode>(
                    "File: {}:{}\n\tExpecting an '->' after function parameters list isntead of {}",
                    m_FilePath,
                    m_CurrentToken.pos,
                    m_CurrentToken
                );
        }

        m_CurrentToken = m_Lexer.getNextToken(); // Eat '->'

        if (m_CurrentToken != token::IDENT) {
            return parseError<ASTFunctionDefinitionNode>(
                    "File: {}:{}\n\tExpecting a type identifier after '->' instead of {}",
                    m_FilePath,
                    m_CurrentToken.pos,
                    m_CurrentToken
                );
        }

        auto typeName = m_CurrentToken.identifier;

        m_CurrentToken = m_Lexer.getNextToken(); // Eat type identifier

        if (m_CurrentToken != token::BRA_O) {
            return parseError<ASTFunctionDefinitionNode>(
                    "File: {}:{}\n\tExpecting a '{' at start of function body instead of {}",
                    m_FilePath,
                    m_CurrentToken.pos,
                    m_CurrentToken
                );
        }

        std::vector<Type*> parametersType = {};
        std::vector<std::shared_ptr<Value>> parametersValue = {};

        // TODO: Create overload for each default parameters
        for (const auto &param : functionDefinition->getParameters()) {
            auto paramType = m_SymbolTable->lookup(param->getType())->getType();
            if (auto arrayDecl = dynamic_cast<ASTArrayDeclarationNode*>(param.get())) {
                paramType = m_SymbolTable->lookup(
                        arrayDecl->getType() + "[" + std::to_string(arrayDecl->getSize()) + "]"
                    )->getType();
            }
            auto paramValue = Value::CreateVariableValue(param->getIdentifier(), paramType);
            parametersValue.push_back(paramValue);
            parametersType.push_back(paramType);
            m_SymbolTable->insert(paramValue);
        }

        m_CurrentToken = m_Lexer.getNextToken();

        auto body = parseBlock(); // Eats '}'

        functionDefinition->setFunctionName(funcName);
        functionDefinition->setReturnType(typeName);
        functionDefinition->setBody(std::move(body));

        m_SymbolTable = m_SymbolTable->popScope(); // Exit the body scope

        auto returnType = m_SymbolTable->lookup(functionDefinition->getReturnType())->getType();
        auto funcType = Type::CreateFunctionType(returnType, parametersType);
        auto insertedType = Type::GetOrInsertType(std::dynamic_pointer_cast<Type>(funcType));
        auto functionValue = Value::CreateFunctionValue(funcName, funcType.get());

        // TODO: Allow function overload
        if (!m_SymbolTable->insert(functionValue)) {
            return parseError<ASTFunctionDefinitionNode>(
                    "File: {}:{}\n\tRedfinition of function {}.",
                    m_FilePath,
                    m_CurrentToken.pos,
                    funcName
                );
        }

        return functionDefinition;
    }

    std::unique_ptr<ASTStructDefinitionNode> Parser::parseStructDefinition() {
        m_CurrentToken = m_Lexer.getNextToken(); // Eat 'struct'

        if (m_CurrentToken != token::IDENT) {
            return parseError<ASTStructDefinitionNode>(
                    "File: {}:{}\n\tExpecting an identifier after 'struct' instead of {}",
                    m_FilePath,
                    m_CurrentToken.pos,
                    m_CurrentToken
                );
        }

        m_SymbolTable = m_SymbolTable->pushScope(m_SymbolTable); // We enter the body scope

        auto structDef = std::make_unique<ASTStructDefinitionNode>(m_SymbolTable);


        structDef->setStructName(m_CurrentToken.identifier);

        m_CurrentToken = m_Lexer.getNextToken(); // Eat identifier

        // TODO: Enable inheritance

        if (m_CurrentToken != token::BRA_O) {
            return parseError<ASTStructDefinitionNode>(
                    "File: {}:{}\n\tExpecting a '{' after struct name instead of {}",
                    m_FilePath,
                    m_CurrentToken.pos,
                    m_CurrentToken
                );
        }

        m_CurrentToken = m_Lexer.getNextToken(); // Eat '{'

        while (m_CurrentToken == token::IDENT || m_CurrentToken == token::FUNC) {
            if (m_CurrentToken == token::IDENT) {
                auto type = m_CurrentToken.identifier;

                m_CurrentToken = m_Lexer.getNextToken(); // Eat type

                if (m_CurrentToken != token::IDENT) {
                    return parseError<ASTStructDefinitionNode>(
                            "File: {}:{}\n\tExpecting an identifier after the type in struct definition"
                            " instead of {}",
                            m_FilePath,
                            m_CurrentToken.pos,
                            m_CurrentToken
                        );
                }

                auto declStmt = parseDeclaration(type);

                structDef->addAttribute(std::move(declStmt));

                if (m_CurrentToken != token::SEMI) {
                    return parseError<ASTStructDefinitionNode>(
                            "File: {}:{}\n\tExpecting a ';' after attribute declaration instead of {}",
                            m_FilePath,
                            m_CurrentToken.pos,
                            m_CurrentToken
                        );
                }

                m_CurrentToken = m_Lexer.getNextToken(); // Eat ';'
            }

            if (m_CurrentToken == token::FUNC) {
                auto funcDef = parseFunctionDefinition();
                structDef->addMethod(std::move(funcDef));
            }
        }

        if (m_CurrentToken != token::BRA_C) {
            return parseError<ASTStructDefinitionNode>(
                    "File: {}:{}\n\tExpecting a '}' after a struct defintion instead of {}",
                    m_FilePath,
                    m_CurrentToken.pos,
                    m_CurrentToken
                );
        }

        // TODO: Add the constructor, (maybe in semantic analysis)
        std::vector<Type *> attrType;
        std::vector<std::string> attrsName;

        for (const auto &attr : structDef->getAttributes()) {
            auto attrName = attr->getIdentifier();
            auto typeName = attr->getType();
            auto typeValue = m_SymbolTable->lookup(typeName);

            attrType.push_back(typeValue->getType());
            attrsName.push_back(attrName);
        }

        /* for (const auto &meth : structDef->getMethods()) {
            auto methName = meth->getFunctionName();
            auto methType = m_SymbolTable->lookup(methName)->getType();

            attrsName.push_back(methName);
            attrType.push_back(methType);
        } */

        m_SymbolTable = m_SymbolTable->popScope();

        auto structType = Type::CreateStructType(structDef->getStructName(), attrsName, attrType);
        auto insertedType = Type::GetOrInsertType(structType);

        auto structTypeValue = Value::CreateTypeValue(structDef->getStructName(), insertedType.get());

        m_SymbolTable->insert(std::move(structTypeValue));

        m_CurrentToken = m_Lexer.getNextToken(); // Eat '}'

        return structDef;
    }

    std::unique_ptr<ASTNode> Parser::parseIdentifier(const std::string &identifier) {
        const std::string& firstIdentifier = std::string(identifier);
        m_CurrentToken = m_Lexer.getNextToken();

        if (m_CurrentToken == token::IDENT) {
            return parseDeclaration(firstIdentifier);
        }

        return parseError<ASTNode>(
                "File: {}:{}\n\tUnxecpted token after identifier: {}",
                m_FilePath,
                m_CurrentToken.pos,
                m_CurrentToken
            );
    }

    // FIXME: Review with new types
    std::unique_ptr<ASTDeclarationNode> Parser::parseDeclaration(const std::string &type) {
        std::unique_ptr<ASTDeclarationNode> declarationNode =
            std::make_unique<ASTDeclarationNode>(m_SymbolTable);

        declarationNode->setType(type);

        std::string identifier = m_CurrentToken.identifier;

        declarationNode->setIdentifier(identifier);

        m_CurrentToken = m_Lexer.getNextToken(); // Eat identifier

        if (m_CurrentToken == token::ACC_O) {
            // m_CurrentToken = m_Lexer.getNextToken(); // Eat '['

            return parseArrayDeclaration(std::move(declarationNode));
        }

        // This should be a simple or struct type, it should be registered in the ST.
        auto typeValue = m_SymbolTable->lookup(type);

        if (!typeValue) {
            return parseError<ASTDeclarationNode>(
                    "File: {}:{}\n\tUnknown type in declaration: {}.",
                    m_FilePath,
                    m_CurrentToken.pos,
                    type
                );
        }

        if (m_CurrentToken == token::ASSIGN) {
            m_CurrentToken = m_Lexer.getNextToken(); // Eat '='

            return parseInitialization(std::move(declarationNode));
        }

        if (m_CurrentToken == token::PAR_O) {
            return parseStructConstructorInitialization(std::move(declarationNode));
        }

        auto variable = Value::CreateVariableValue(identifier, typeValue->getType());
        m_SymbolTable->insert(variable);

        return declarationNode;
    }

    std::unique_ptr<ASTInitializationNode> Parser::parseInitialization(
            std::unique_ptr<ASTDeclarationNode> declaration
        ) {
        auto type = declaration->getType();
        auto identifier = declaration->getIdentifier();

        auto initialization = std::make_unique<ASTInitializationNode>(m_SymbolTable);

        if (auto expr = parseExpr()) {
            initialization->setIdentifier(identifier);
            initialization->setType(type);
            initialization->setValue(std::move(expr));

            auto typeValue = m_SymbolTable->lookup(type)->getType();
            auto initValue = Value::CreateVariableValue(identifier, typeValue);

            m_SymbolTable->insert(initValue);

            return initialization;
        }

        return parseError<ASTInitializationNode>(
                "File {}:{}\n\tExpecting an expression after '=' instead of {}",
                m_FilePath,
                m_CurrentToken.pos,
                m_CurrentToken
            );
    }

    // WIP: Correct array size
    std::unique_ptr<ASTArrayDeclarationNode> Parser::parseArrayDeclaration(
            std::unique_ptr<ASTDeclarationNode> declaration
        ) {

        std::vector<int> arraySizes = std::vector<int>();

        while (m_CurrentToken == token::ACC_O) {
            m_CurrentToken = m_Lexer.getNextToken(); // Eat '['

            if (m_CurrentToken != token::INT_LIT) {
                return parseError<ASTArrayDeclarationNode>(
                        "File {}:{}\n\tExpecting an integer literal after '[' instead of {}",
                        m_FilePath,
                        m_CurrentToken.pos,
                        m_CurrentToken
                    );
            }

            arraySizes.push_back(std::stoi(m_CurrentToken.identifier));

            m_CurrentToken = m_Lexer.getNextToken(); // Eat int lit

            if (m_CurrentToken != token::ACC_C) {
                return parseError<ASTArrayDeclarationNode>(
                        "File {}:{}\n\tExpecting a ']' after array size instead of {}",
                        m_FilePath,
                        m_CurrentToken.pos,
                        m_CurrentToken
                    );
            }

            m_CurrentToken = m_Lexer.getNextToken(); // Eat ']'
        }

        auto arrayDeclaration = std::make_unique<ASTArrayDeclarationNode>(m_SymbolTable);

        std::reverse(arraySizes.begin(), arraySizes.end());

        auto baseTypeIdent = declaration->getType();
        auto baseTypeValue = m_SymbolTable->lookup(baseTypeIdent);

        if (!baseTypeValue) {
            return parseError<ASTArrayDeclarationNode>(
                    "File: {}:{}\n\tTrying to declare an array of unknown type: {}",
                    m_FilePath,
                    m_CurrentToken,
                    baseTypeIdent
                );
        }

        // We should have inserted all the types we need for the array if they are nested.
        for (size_t i = 0; i < arraySizes.size() - 1; i++)
        {
            auto oldBaseType = baseTypeValue->getType();
            baseTypeIdent += "[" + std::to_string(arraySizes[i]) + "]";
            baseTypeValue = m_SymbolTable->lookup(baseTypeIdent);

            if (!baseTypeValue) {
                auto baseType = Type::CreateArrayType(oldBaseType, arraySizes[i]);
                Type::GetOrInsertType(baseType);
                baseTypeValue = Value::CreateTypeValue(baseTypeIdent, baseType.get());
                m_SymbolTable->insert(baseTypeValue);
            }
        }

        auto size = arraySizes.back();

        auto arrTypeIdent = baseTypeIdent + "[" + std::to_string(size) + "]";

        if (!m_SymbolTable->lookup(arrTypeIdent)) {
            auto newType = Type::CreateArrayType(baseTypeValue->getType(), size);
            auto insertType = Type::GetOrInsertType(newType);
            auto newTypeValue = Value::CreateTypeValue(arrTypeIdent, newType.get());

            m_SymbolTable->insert(newTypeValue);
        }

        arrayDeclaration->setType(baseTypeIdent);
        arrayDeclaration->setIdentifier(declaration->getIdentifier());
        arrayDeclaration->setSize(size);

        if (m_CurrentToken == token::ASSIGN) {
            m_CurrentToken = m_Lexer.getNextToken(); // Eat '='

            return parseArrayInitialization(std::move(arrayDeclaration));
        }

        auto arrType = m_SymbolTable->lookup(arrTypeIdent)->getType();
        auto arrValue = Value::CreateVariableValue(arrayDeclaration->getIdentifier(), arrType);
        m_SymbolTable->insert(arrValue);

        return arrayDeclaration;
    }

    std::unique_ptr<ASTArrayInitializationNode> Parser::parseArrayInitialization(
            std::unique_ptr<ASTArrayDeclarationNode> declaration
        ) {
        // We dont care if types are incompatible we'll check that later
        auto values = parseExpr();
        if (!values) {
            return parseError<ASTArrayInitializationNode>(
                    "File: {}:{}\n\tExpecting an expression",
                    m_FilePath,
                    m_CurrentToken.pos
                );
        }

        auto arrayInitialization = std::make_unique<ASTArrayInitializationNode>(m_SymbolTable);
        arrayInitialization->setIdentifier(declaration->getIdentifier());
        arrayInitialization->setType(declaration->getType());
        arrayInitialization->setSize(declaration->getSize());

        arrayInitialization->setValues(std::move(values));

        auto arrTypeIndent = arrayInitialization->getType() + "[" +
            std::to_string(arrayInitialization->getSize()) + "]";

        auto arrType = m_SymbolTable->lookup(arrTypeIndent)->getType();
        auto arrValue = Value::CreateVariableValue(arrayInitialization->getIdentifier(), arrType);
        m_SymbolTable->insert(arrValue);

        return arrayInitialization;
    }

    std::unique_ptr<ASTStructInitializationNode> Parser::parseStructConstructorInitialization(
            std::unique_ptr<ASTDeclarationNode> declaration
        ) {
        auto structInit = std::make_unique<ASTStructInitializationNode>(m_SymbolTable);
        structInit->setType(declaration->getType());
        structInit->setIdentifier(declaration->getIdentifier());

        auto arguments = parseArgumentList(); // Eats ')'

        structInit->setAttributeValues(std::move(arguments));

        auto structType = m_SymbolTable->lookup(structInit->getType())->getType();
        auto structVar = Value::CreateVariableValue(structInit->getIdentifier(), structType);

        m_SymbolTable->insert(structVar);

        return structInit;
    }

    std::unique_ptr<ASTBlockNode> Parser::parseBlock() {
        auto block = std::make_unique<ASTBlockNode>(m_SymbolTable);

        while (m_CurrentToken != token::BRA_C) {
            if (m_CurrentToken == token::IF) {
                auto ifNode = parseIf();

                if(!ifNode) {
                    return parseError<ASTBlockNode>("If wrong!!!");
                }

                block->addStatement(std::move(ifNode));
                continue;
            }

            if (m_CurrentToken == token::FOR) {
                auto forNode = parseFor();

                if(!forNode) {
                    return parseError<ASTBlockNode>("For wrong!!!");
                }

                block->addStatement(std::move(forNode));
                continue;
            }

            if (m_CurrentToken == token::RETURN) {
                auto returnNode = parseReturn();

                if(!returnNode) {
                    return parseError<ASTBlockNode>("Return wrong!!!");
                }

                if (m_CurrentToken != token::SEMI) {
                    return parseError<ASTBlockNode>(
                            "File: {}:{}\n\tExpecting a ';' after a return statement instead of {}",
                            m_FilePath,
                            m_CurrentToken.pos,
                            m_CurrentToken
                        );
                }

                m_CurrentToken = m_Lexer.getNextToken(); // Eat ';'

                block->addStatement(std::move(returnNode));
                continue;
            }

            if (m_CurrentToken == token::IDENT) {
                auto oldToken = m_CurrentToken;
                auto firstIdentifier = m_CurrentToken.identifier;

                m_CurrentToken = m_Lexer.getNextToken(); // Eat first identifier

                if (m_CurrentToken == token::IDENT) {
                    auto declStmt = parseDeclaration(firstIdentifier);

                    if (m_CurrentToken != token::SEMI) {
                        return parseError<ASTBlockNode>(
                                "File: {}:{}\n\tExpecting a ';' after a declaration statemennt instead of {}",
                                m_FilePath,
                                m_CurrentToken.pos,
                                m_CurrentToken
                            );
                    }

                    m_CurrentToken = m_Lexer.getNextToken(); // Eat ';'

                    block->addStatement(std::move(declStmt));
                    continue;
                }

                auto exprTmp = parseExpr(oldToken);

                if (m_CurrentToken == token::ASSIGN) {
                    auto assignNode = parseAssignment(std::move(exprTmp));
